--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -129,7 +129,7 @@ nav a:hover {
   /* top-section */
 .main-content {
 	display: flex;	
-	border-top: solid 1px #d3d3d3;c
+	border-top: solid 1px #d3d3d3;
 }
 .main-content .top-section {
 	margin-left: 24px;
@@ -164,11 +164,11 @@ nav a:hover {
 }
 .top-section div {
 	font-family: "Kreon", serif;
-	letter-spacing: 0.6px;
+	letter-spacing: 0.5px;
 	font-size: 0.8rem;
 	font-weight: normal;
 	margin-bottom: 32px;
-	word-spacing: 1px;
+	word-spacing: 0.9px;
 }
 
 /* main-content */
@@ -247,7 +247,6 @@ nav a:hover {
     border-top: solid 1px #d3d3d3;
     border-bottom: solid 1px #d3d3d3;
 }
-
 .Careers h2 {
 	position: relative;
 	top: 22px;
@@ -282,17 +281,20 @@ nav a:hover {
 	border-top-left-radius: 20px;
 }
 .Boxes h3 {
+	font-size: 1.6rem;
+	font-weight: bold;
     margin: 16px 0px 8px 16px;
     letter-spacing: 0.8px;
 }
 .Boxes span {
+	font-size: 1.1rem;
 	margin: 0px 0px 0px 16px;
-	letter-spacing: 0.7px;
+	letter-spacing: 0.8px;
 }
 .Boxes p {
 	margin: 8px 0px 24px 16px;
 	letter-spacing: 0.8px;
-	line-height: 1.5rem;
+	line-height: 1.6rem;
 	font-family: "Kreon", serif;
 	font-size: 1.1rem;
 }
@@ -403,7 +405,7 @@ footer .terms {
 /* MEDIA QUERIES */
 
 
-/* HEADER DESKTOP 880px MQ */
+/* HEADER DESKTOP MQ */
 @media only screen and (min-width: 880px) {
 
 nav.mobile-nav-container {
@@ -437,7 +439,7 @@ header nav a {
 	top: 22px;
 	height: 16px;
 	font-size: 0.9rem;
-}
+ }
 }
 /* header desktop 725px mq */  
 @media only screen and (max-width: 725px) {
@@ -464,13 +466,13 @@ nav.mobile-nav-container a {
 
 nav.mobile-nav-container a:first-child img {
     margin-top: -2px;
+ }
 }
 
 
-
   
   
-/* TOP-BANNER DESKTOP 1234px MQ */
+/* TOP-BANNER DESKTOP MQ */
 @media only screen and (max-width: 1234px) {
 
 .top-banner section {
@@ -483,20 +485,22 @@ nav.mobile-nav-container a:first-child img {
 .top-banner section {
 	margin-top: 20px;
  }
+
+.top-banner h3 {
+	font-size: 1.3rem;
+	letter-spacing: 1.3px;
+ }
+
+.button {
+	font-size: 1.4rem;
+	letter-spacing: 1.8px
+ }
 }
 /* top-banner desktop 1080px mq */
 @media only screen and (max-width: 1080px) {
 
 .top-banner section {
 	margin-top: 20px;
-}
-
-.top-banner h3 {
-	font-size: 1.3rem;
-}
-
-.button {
-	font-size: 1.4rem;
  }
 }
 /* top-banner desktop 866px mq */
@@ -504,23 +508,32 @@ nav.mobile-nav-container a:first-child img {
 
 .top-banner h1 {
 	font-size: 2.8rem;
+	letter-spacing: 1.6px;
 }
+
 .top-banner h3 {
     font-size: 1.2rem;
+    letter-spacing: 1.2px;
 }
+
 .top-banner section {
 	margin-top: 50px;
 }
+
 .button {
 	font-size: 1.3rem;
+	letter-spacing: 1.7px;
  }
 }
 /* top-banner desktop 825px mq */
 @media only screen and (max-width: 825px)  {
-
-.top-banner section {
-	margin-top: 27px;
+	.top-banner h3 {
+    font-size: 1rem;
  }
+}
+
+@media only screen and (max-width: 800px) {
+
 }
 /* top-banner desktop 725px mq */
 @media only screen and (max-width: 725px) {
@@ -547,7 +560,7 @@ nav.mobile-nav-container a:first-child img {
 }
 
 .top-banner h3 {
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .button {
@@ -602,11 +615,98 @@ nav.mobile-nav-container a:first-child img {
  }
 }
 
+@media only screen and (max-width: 1220px) {
+.main-content .info-images div:last-child section {
+    
+    margin-top: 20px;
+ }
+}
+
+@media only screen and (max-width: 1149px) {
+.main-content .info-images div:first-child section {
+     
+     margin-top: 30px;
+ }
+}
+
+@media only screen and (max-width: 903px) {
+.main-content .info-images div:nth-child(even) section {
+     
+     margin-top: 30px;
+ }
+}
 
 
-/* MAIN-CONTENT DESKTOP 725px MQ */
+/* MAIN-CONTENT DESKTOP MQ */
+@media only screen and (max-width: 959px) {
+.main-content .info-images div:last-child section {
+    
+    margin-top: 10px;
+ }
+}
+
+@media only screen and (max-width: 866px) {
+
+.main-content .top-section h2 {
+    font-size: 2.5rem;
+    letter-spacing: 1.8px;
+    word-spacing: 1.8px;
+}
+
+.main-content .top-section p {
+	font-size: 1rem;
+	letter-spacing: 0.6px
+	word-spacing: 1.6;
+}
+
+.main-content .top-section div {
+	font-size: 0.6rem;
+	letter-spacing: 0.3px;
+	word-spacing: 0.6px;
+}
+
+.main-content .info-images h3 {
+	font-size: 1.6rem;
+	letter-spacing: 0.9px;
+}
+
+.main-content .info-images section {
+	font-size: 1rem;
+	letter-spacing: 0.6px;
+ }
+
+.main-content .info-images div:first-child section {
+    margin-top: 35px;
+}
+
+.main-content .info-images div:nth-child(even) section {
+	margin-top: 45px;
+}
+
+@media only screen and (max-width: 825px) {
+.main-content .top-section p {
+	font-size: 0.8rem;
+}
+
+.main-content .top-section div {
+	font-size: 0.5rem;
+}
+
+.main-content .info-images h3 {
+    font-size: 1.3rem;
+}
+.main-content .info-images section {
+    font-size: 0.8rem;
+ }
+
+.main-content .info-images div:last-child section {
+	margin-top: 30px;
+}
+
+
+
+/* MAIN-CONTENT DESKTOP MQ */
 @media only screen and (max-width: 725px) {
-
 .main-content .top-section  {
 	display: none;
 }
@@ -645,16 +745,58 @@ nav.mobile-nav-container a:first-child img {
 }
 
 .main-content .info-images h3 {
-	font-size: 1.6rem;
+	font-size: 1.5rem;
 }
 
 .main-content .info-images span {
     display: block;
 }
+
 .main-content .info-images p {
 	display: block;
  }
 }
+
+
+/* MAIN-SECTION CAREERS DESKTOP */
+@media only screen and (max-width: 866px) {
+
+.Careers .Boxes h3 {
+    font-size: 1.3rem;
+}
+
+.Careers .Boxes span {
+	font-size: 1rem;
+}
+
+.Careers .Boxes p {
+	font-size: 1rem;
+	letter-spacing: 0.6px
+ }
+}
+
+@media only screen and (max-width: 825px) {
+
+.Careers .Boxes h3 {
+    font-size: 1.2rem;
+}
+
+.Careers .Boxes span {
+    font-size: 0.9rem;
+}
+
+.Careers .Boxes p {
+    font-size: 0.8rem;
+ }
+}
+
+
+
+
+
+
+
+
 /* main-section desktop 725px */
 @media only screen and (max-width: 725px) {
 
@@ -664,7 +806,7 @@ nav.mobile-nav-container a:first-child img {
 }
 
 .Careers h2 {
-	font-size: 2.6rem;
+	font-size: 2.4rem;
 	margin: 1px 0px 43px 0px;
 }
 
