--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -227,8 +227,6 @@ nav a:hover {
 }	
 .main-content .info-images a {
 	color: black;
-	position: relative;
-	top: 8px;
 }
 .main-content .info-images a:hover {
     color: #d3d3d3;
@@ -745,6 +743,7 @@ nav.mobile-nav-container a:first-child img {
 
 .main-content .info-images section {
 	text-align: center;
+	padding: 16px 0px 28px 0px;
     font-size: 1rem;
 }
 
