--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -196,6 +196,7 @@ nav a:hover {
     padding-top: 16px;
     background-color: #fafad2;
 	border-bottom: none;
+
 }
 .main-content .info-images img {
 	width: 35%;
@@ -216,7 +217,7 @@ nav a:hover {
 }
 .main-content .info-images section {
 	width: 65%;
-	margin: 40px 0px 0px 16px;
+	margin: 30px 0px 0px 16px;
 	flex-direction: column;
 	letter-spacing: 0.8px;
 	font-family: "kreon", serif;
@@ -225,8 +226,13 @@ nav a:hover {
 .main-content .info-images span {
     letter-spacing: 0.8px;
 }	
+
+.main-content .info-images div:last-child span {
+    line-height: 1.4;
+}
 .main-content .info-images a {
 	color: black;
+	line-height: 2.5;
 }
 .main-content .info-images a:hover {
     color: #d3d3d3;
@@ -717,39 +723,55 @@ nav.mobile-nav-container a:first-child img {
 
 .main-content .info-images div {
 	justify-content: center;
+	border-bottom: solid 1px #d3d3d3;
 	flex-wrap: wrap;
 	border: none;
 }
 
+.main-content .info-images div:first-child section {
+	width: 100%;
+	margin-left: 0;
+	margin-bottom: 16px;
+}
+
+.main-content .info-images div:nth-child(even) section {
+	margin-left: 0; 
+	margin-top: 35px;
+}
+
 .main-content .info-images div:last-child {
+	border-top: solid 1px #d3d3d3;
+}
+
+.main-content .info-images div:last-child section {
 	width: 100%;
 	background-size: cover;
-	border-top: solid 1px #d3d3d3;
+	margin-left: 0;
 }
 
 .main-content .info-images img {
 	display: block;
 	height: auto;
 	width: auto;
-	margin: 0;
-	border-radius: 0px;
-}
-
-.main-content .info-images div:first-child section {
-	width: 100%;
-    margin-bottom: 0px;
-    border-bottom: solid 1px #d3d3d3;
+	margin: auto;
+	border-radius: 20px;
 }
 
 .main-content .info-images section {
+	display: flex;
+	justify-content: space-evenly;
 	text-align: center;
-	padding: 16px 0px 28px 0px;
+	padding-top: -16px;
     font-size: 1rem;
+    margin: 0px 0px 32px 0px;
 }
 
 .main-content .info-images h3 {
 	font-size: 1.5rem;
  }
+
+.main-content .info-images a {
+    line-height: 0;
 }
 /* MAIN-CONTENT MOBILE MQ */
 @media only screen and (max-width: 480px) {
