--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -165,7 +165,7 @@ nav a:hover {
 .top-section div {
 	font-family: "Kreon", serif;
 	letter-spacing: 0.5px;
-	font-size: 0.8rem;
+	font-size: 0.7rem;
 	font-weight: normal;
 	margin-bottom: 32px;
 	word-spacing: 0.9px;
@@ -288,6 +288,7 @@ nav a:hover {
 .Careers .Boxes h3 {
 	font-size: 1.4rem;
 	font-weight: bold;
+	text-shadow: 2px 2px #ffff33;
     margin: 16px 0px 8px 16px;
     letter-spacing: 0.8px;
 }
@@ -301,7 +302,7 @@ nav a:hover {
 	letter-spacing: 0.8px;
 	line-height: 1.6rem;
 	font-family: "Kreon", serif;
-	font-size: 1rem;
+	font-size: 1.1rem;
 }
 
 
@@ -334,6 +335,7 @@ nav a:hover {
 }
 .Thesis-content .top-section p {
 	margin-top: 8px;
+	font-size: 1.1rem;
 	font-family: "kreon", serif;
 }
 .Thesis-content .top-section video {
@@ -363,6 +365,7 @@ nav a:hover {
 }
 .Thesis-content .images div:last-child {
 	border-bottom: none;
+	background: none;
 }
 .Thesis-content .images img {
 	width: 35%;
@@ -373,7 +376,8 @@ nav a:hover {
 }
 .Thesis-content .images section {
 	margin-left: 16px;
-	width: 50%;
+	width: 40%;
+	height: 100%;
 	font-size: 1.1rem;
 }
 .Thesis-content .images h3 {
@@ -390,6 +394,8 @@ nav a:hover {
 	font-family: "Kreon", serif;
 	letter-spacing: 0.8px;
 }
+
+
 footer  {
 	width: 100%;
 	display: flex;
@@ -399,9 +405,12 @@ footer  {
 }
 footer div {
 	font-size: 0.8rem;	
+	word-spacing: 0.9px;
+	letter-spacing: 0.5px;
 }
 footer .terms {
 	word-spacing: 10px;
+	letter-spacing: 0.5px;
 	margin-right: 48px;
 }
 
@@ -532,13 +541,10 @@ nav.mobile-nav-container a:first-child img {
 }
 /* top-banner desktop 825px mq */
 @media only screen and (max-width: 825px)  {
-	.top-banner h3 {
+
+.top-banner h3 {
     font-size: 1rem;
  }
-}
-
-@media only screen and (max-width: 800px) {
-
 }
 /* top-banner desktop 725px mq */
 @media only screen and (max-width: 725px) {
@@ -620,7 +626,12 @@ nav.mobile-nav-container a:first-child img {
  }
 }
 
+
+
+
+/* MAIN-CONTENT DESKTOP MQ */
 @media only screen and (max-width: 1220px) {
+
 .main-content .info-images div:last-child section {
     
     margin-top: 15px;
@@ -628,28 +639,31 @@ nav.mobile-nav-container a:first-child img {
 }
 
 @media only screen and (max-width: 1149px) {
+
 .main-content .info-images div:first-child section {
      
-     margin-top: 30px;
+    margin-top: 30px;
  }
 }
 
 @media only screen and (max-width: 903px) {
+
 .main-content .info-images div:nth-child(even) section {
      
-     margin-top: 30px;
+    margin-top: 30px;
  }
 }
 
 
-/* MAIN-CONTENT DESKTOP MQ */
+/* main-content desktop 959px mq */
 @media only screen and (max-width: 959px) {
+
 .main-content .info-images div:last-child section {
     
-     margin-top: 10px;
+    margin-top: 10px;
  }
 }
-
+/* main-content desktop 866px mq */
 @media only screen and (max-width: 866px) {
 
 .main-content .top-section h2 {
@@ -691,7 +705,9 @@ nav.mobile-nav-container a:first-child img {
 	margin-top: 20px;
  }
 }
+/* main-content desktop 825px mq */
 @media only screen and (max-width: 825px) {
+
 .main-content .top-section p {
 	font-size: ;
 }
@@ -708,18 +724,20 @@ nav.mobile-nav-container a:first-child img {
 	margin-top: 20px;
  }
 }
-
+/* main-content desktop 760px mq */
 @media only screen and (max-width: 760px) {
+
 .main-content .info-images div:nth-child(even) section {
 	margin-top: 35px;
  }
+
 .main-content .info-images div:last-child section {
     margin-top: 15px;
  }
 }
-
-/* MAIN-CONTENT DESKTOP MQ */
+/* main-content desktop 725px mq */
 @media only screen and (max-width: 725px) {
+
 .main-content .top-section  {
 	display: none;
 }
@@ -782,7 +800,8 @@ nav.mobile-nav-container a:first-child img {
     line-height: 0;
  }
 }
-/* MAIN-CONTENT MOBILE MQ */
+  /* MAIN-CONTENT MOBILE MQ */
+/* main-content mobile 480px mq */
 @media only screen and (max-width: 480px) {
 
 .main-content .mobile-images {
@@ -796,7 +815,8 @@ nav.mobile-nav-container a:first-child img {
 
 
 
-/* MAIN-SECTION CAREERS DESKTOP */
+  /* MAIN-SECTION CAREERS DESKTOP */
+/* main-section desktop 866px mq */
 @media only screen and (max-width: 866px) {
 
 .Careers h2 {
@@ -816,22 +836,22 @@ nav.mobile-nav-container a:first-child img {
 }
 
 .Boxes p.boxes-text  {
-	font-size: 0.9rem;
+	font-size: 1rem;
 	letter-spacing: 0.6px;
  }
 }
-
+/* main-section careers desktop 825px mq */
 @media only screen and (max-width: 825px) {
 
 .Careers .Boxes span  {
     font-size: 1rem;
  }
-.Boxes p.boxes-text {
-	font-size: 0.9;
-}
-}
 
-/* main-section desktop 725px */
+.Boxes p.boxes-text {
+	font-size: ;
+ }
+}
+/* main-section careers desktop 725px */
 @media only screen and (max-width: 725px) {
 
 .Careers {
@@ -883,7 +903,22 @@ nav.mobile-nav-container a:first-child img {
 
 
   
-/* THESIS-EXIBIT (top-section) DESKTOP 725px MQ */
+  
+  /* THESIS-EXIBIT DESKTOP */
+/* thesis-exibit desktop 866px mq */
+@media only screen and (max-width: 866px) {
+
+.Thesis-content .top-section h3 {
+    font-size: 1.6rem;
+ }
+.Thesis-content .top-section p {
+	font-size: 1rem;
+}
+.Thesis-content .images section {
+ 	font-size: 1rem;
+ }
+}
+/* theis-exibit desktop 725px mq */
 @media only screen and (max-width: 725px) {
 
 .title h2 {
@@ -896,7 +931,7 @@ nav.mobile-nav-container a:first-child img {
 	margin: 0px 0px 24px 0px;
 }
 
-.Thesis-content .top-section h3 {
+.Thesis-content .top-section h3, p {
 	display: none;
 }
 
@@ -906,15 +941,15 @@ nav.mobile-nav-container a:first-child img {
 
 .Thesis-content .top-section video {
     width: 100%;
-}
-.Thesis-content .top-section p {
-    font-size: 1rem;
  }
 }
-
-
  
-/* FOOTER MOBILE 480px MQ */ 
+
+
+
+
+  /* FOOTER MOBILE MQ */ 
+/* footer mobile 480px */
 @media only screen and (max-width: 480px) {
 
 footer {
