--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -96,7 +96,7 @@ nav a:hover {
 	letter-spacing: 1.5px;
     word-spacing: 8px;
 	font-weight: normal;
-	font-size: 1.5rem;
+	font-size: 1.3rem;
 	width: 100%;
 }
 .button {
@@ -133,17 +133,15 @@ nav a:hover {
 }
 .main-content .top-section {
 	margin-left: 24px;
-}
-.top-section {
     width: 60%;
 }
-.top-section img {
+.main-content .top-section img {
 	width: 100%;
     margin: 32px 0px 16px 0px; 
     border: solid 4px #d3d3d3;
     border-radius: 20px;
 }
-.top-section h2 {
+.main-content .top-section h2 {
 	margin-top: 0px;
 	font-family: "Kranky"; 
 	letter-spacing: 2px;
@@ -151,18 +149,19 @@ nav a:hover {
 	color: black;
 	text-shadow: 3px 3px #ffff33;
 	font-weight: normal;
+	width: 100%;
 }
-.top-section p {
+.main-content .top-section p {
 	width: 100%;
 	font-family: "Kreon", serif;
 	font-size: 1.1rem;
 	line-height: 1.4;
-	letter-spacing: 0.8px;
+	letter-spacing: 0.7px;
 	word-spacing: 2px; 
 	margin: -9px 0px 13px 0px;
 	font-weight: normal;
 }
-.top-section div {
+.main-content .top-section div {
 	font-family: "Kreon", serif;
 	letter-spacing: 0.5px;
 	font-size: 0.7rem;
@@ -182,7 +181,7 @@ nav a:hover {
 }  
 .main-content .info-images div {
 	width: 100%;
-    height: ;
+	height: auto;
 	display: flex;
 	border-bottom: solid 1px #d3d3d3;
 	border-left: solid 1px #d3d3d3;
@@ -197,7 +196,6 @@ nav a:hover {
     padding-top: 16px;
     background-color: #fafad2;
 	border-bottom: none;
-
 }
 .main-content .info-images img {
 	width: 35%;
@@ -209,8 +207,8 @@ nav a:hover {
 }
 .main-content .info-images h3 {
 	width: 100%;
-	font-size: 1.8rem;
-	letter-spacing: 1px;
+	font-size: 1.9rem;
+	letter-spacing: 0.8px;
 	font-weight: normal;
 	text-shadow: 2px 2px #ffff33;
 	margin: 0px 0px 8px 0px;
@@ -220,20 +218,19 @@ nav a:hover {
 	width: 65%;
 	margin-top: 40px;
 	flex-direction: column;
-	letter-spacing: 0.8px;
 	font-family: "kreon", serif;
 	font-size: 1.1rem;
 }
 .main-content .info-images span {
     letter-spacing: 0.8px;
 }	
-
 .main-content .info-images div:last-child span {
     line-height: 1.4;
 }
 .main-content .info-images a {
 	color: black;
 	line-height: 2.5;
+	letter-spacing: 0.8px;
 }
 .main-content .info-images a:hover {
     color: #d3d3d3;
@@ -268,7 +265,6 @@ nav a:hover {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    
 }
 .Careers .Boxes div {
     background-color: #ffffff;
@@ -287,19 +283,21 @@ nav a:hover {
 	border-top-left-radius: 20px;
 }
 .Careers .Boxes h3 {
-	font-size: 1.4rem;
-	font-weight: bold;
+	font-size: 1.9rem;
+	font-weight: normal;
+	font-family: "Josefin Sans";
 	text-shadow: 2px 2px #ffff33;
-    margin: 16px 0px 8px 16px;
-    letter-spacing: 0.8px;
+    margin: 28px 0px 16px 16px;
+    letter-spacing: 0.6px;
 }
-.Careers .Boxes span {
-	font-size: 1.1rem;
+.Careers .Boxes h4 {
+	font-size: 1.2rem;
 	margin: 0px 0px 0px 16px;
-	letter-spacing: 0.8px;
+	letter-spacing: 0.7px;
+	font-weight: normal;
 }
 .Boxes p.boxes-text {
-	margin: 8px 0px 24px 16px;
+	margin: 10px 0px 14px 16px;
 	letter-spacing: 0.8px;
 	line-height: 1.6rem;
 	font-family: "Kreon", serif;
@@ -331,8 +329,8 @@ nav a:hover {
 	text-shadow: 2px 2px #ffff33;
 	margin: 24px 0px 0px 0px;
 	font-weight: normal;
-	font-size: 1.8rem;
-    letter-spacing: 1px;
+	font-size: 1.9rem;
+    letter-spacing: 0.8px;
 }
 .Thesis-content .top-section p {
 	margin-top: 8px;
@@ -387,10 +385,10 @@ nav a:hover {
 .Thesis-content .images h3 {
 	width: 100%;
 	font-family: "Josefin Sans";
-	font-size: 1.8rem;
+	font-size: 1.9rem;
 	line-height: 1.2;
 	font-weight: normal;
-	letter-spacing: 1px;
+	letter-spacing: 0.8px;
 	text-shadow: 2px 2px #ffff33;
 	margin-bottom: 8px;
 }
@@ -525,7 +523,7 @@ nav.mobile-nav-container a:first-child img {
 @media only screen and (max-width: 866px) {
 
 .top-banner h1 {
-	font-size: 2.8rem;
+	font-size: 2.9rem;
 	letter-spacing: 1.6px;
 }
 
@@ -547,7 +545,7 @@ nav.mobile-nav-container a:first-child img {
 @media only screen and (max-width: 825px)  {
 
 .top-banner h3 {
-    font-size: 1rem;
+    font-size: 1.1rem;
  }
 }
 /* top-banner desktop 725px mq */
@@ -575,7 +573,7 @@ nav.mobile-nav-container a:first-child img {
 }
 
 .top-banner h3 {
-    font-size: 1rem;
+    font-size: 1.1rem;
 }
 
 .button {
@@ -694,7 +692,7 @@ nav.mobile-nav-container a:first-child img {
 }
 
 .main-content .info-images section {
-	font-size: 0.9rem;
+	font-size: 1rem;
 	letter-spacing: 0.6px;
  }
 
@@ -713,15 +711,19 @@ nav.mobile-nav-container a:first-child img {
 @media only screen and (max-width: 825px) {
 
 .main-content .top-section p {
-	font-size: ;
+	font-size: 0.9rem;
 }
 
 .main-content .top-section div {
 	font-size: 0.6rem;
 }
 
+.main-content .info-images section {
+	font-size: 0.9rem;
+}
+
 .main-content .info-images h3 {
-    font-size: 1.4rem;
+    font-size: 1.5rem;
 }
 
 .main-content .info-images div:last-child section {
@@ -797,7 +799,7 @@ nav.mobile-nav-container a:first-child img {
 }
 
 .main-content .info-images h3 {
-	font-size: 1.5rem;
+	font-size: 1.8rem;
  }
 
 .main-content .info-images a {
@@ -827,15 +829,11 @@ nav.mobile-nav-container a:first-child img {
 	font-size: 2.5rem;
 }
 
-.Careers .Boxes img {
-
-}
-
 .Careers .Boxes h3 {
-    font-size: 1.3rem;
+    font-size: 1.6rem;
 }
 
-.Careers .Boxes span {
+.Careers .Boxes h4 {
 	font-size: 1rem;
 }
 
@@ -847,12 +845,16 @@ nav.mobile-nav-container a:first-child img {
 /* main-section careers desktop 825px mq */
 @media only screen and (max-width: 825px) {
 
-.Careers .Boxes span  {
+.Careers .Boxes h3 {
+	font-size: 1.5rem;
+}
+
+.Careers .Boxes h4  {
     font-size: 1rem;
  }
 
 .Boxes p.boxes-text {
-	font-size: ;
+	font-size: 0.9rem;
  }
 }
 /* main-section careers desktop 725px */
@@ -896,7 +898,7 @@ nav.mobile-nav-container a:first-child img {
 	display: none;
 }
 
-.Careers .Boxes span {
+.Careers .Boxes h4 {
 	display: none;
 }
 
@@ -911,36 +913,34 @@ nav.mobile-nav-container a:first-child img {
   /* THESIS-EXIBIT DESKTOP */
 
 @media only screen and (max-width: 1300px) {
+
 .Thesis-content .images div:first-child section {
      margin-top: -10px;  
  }
 }
 @media only screen and (max-width: 1053px) {
+
 .Thesis-content .images div:first-child section {
 	 margin-top: -22px;
  }
 }
 
-
-
-
-
-
-
-
-
-
 /* thesis-exibit desktop 866px mq */
 @media only screen and (max-width: 866px) {
 
+.title h2 {
+	font-size: 2.5rem;
+}
 .Thesis-content .top-section h3 {
     font-size: 1.6rem;
 }
 .Thesis-content .top-section p {
 	font-size: 1rem;
+	letter-spacing: 0.6px;
 }
 .Thesis-content .images section {
  	font-size: 1rem;
+ 	letter-spacing: 0.6px;
 }
 .Thesis-content .images div:first-child section {
      margin-top: -17px;  
@@ -950,9 +950,20 @@ nav.mobile-nav-container a:first-child img {
  }
 }
 
+@media only screen and (max-width: 825px) {
+
+.Thesis-content .images h3 {
+	font-size: 1.4rem;
+ }	
+
+.Thesis-content .images div:first-child section {
+    margin-top: -10px;
+ }
+}
+
 @media only screen and (max-width: 764px) {
 .Thesis-content .images div:last-child section {
-	margin-top: 8px;
+	margin-top: ;
 }
 /* theis-exibit desktop 725px mq */
 @media only screen and (max-width: 725px) {
