--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -156,7 +156,7 @@ nav a:hover {
 	font-family: "Kreon", serif;
 	font-size: 1.1rem;
 	line-height: 1.4;
-	letter-spacing: 0.7px;
+	letter-spacing: 0.8px;
 	word-spacing: 2px; 
 	margin: -9px 0px 13px 0px;
 	font-weight: normal;
@@ -322,6 +322,7 @@ nav a:hover {
 }
 .Thesis-content .top-section {
 	width: 60%;
+	height: auto;
 	margin: 0px 24px 32px 24px;
 }
 .Thesis-content .top-section h3 {
@@ -333,8 +334,10 @@ nav a:hover {
     letter-spacing: 0.8px;
 }
 .Thesis-content .top-section p {
-	margin-top: 8px;
+	margin-top: 16px;
 	font-size: 1.1rem;
+	letter-spacing: 0.8px;
+	word-spacing: 2px;
 	font-family: "kreon", serif;
 }
 .Thesis-content .top-section video {
@@ -354,21 +357,6 @@ nav a:hover {
 	background-color: #fafad2;
 	border: solid 1px #d3d3d3;
 }
-.Thesis-content .images div:first-child {
-	height: auto;
-    border-top: none;
-    border-bottom: none;
-}
-.Thesis-content .images div:first-child section {
-	margin-top: 20px;
-}
-.Thesis-content .images div:nth-child(2n+2) section {
-    margin-top: 25px;
-}
-.Thesis-content .images div:last-child {
-	border-bottom: none;
-	background: none;
-}
 .Thesis-content .images img {
 	width: 35%;
 	height: 11.1rem;
@@ -379,25 +367,40 @@ nav a:hover {
 }
 .Thesis-content .images section {
 	width: 40%;
-	height: auto;
 	font-size: 1.1rem;
+	font-family: "Kreon", serif;
+	letter-spacing: 0.8px;
+    word-spacing: 2px;
 }
 .Thesis-content .images h3 {
 	width: 100%;
 	font-family: "Josefin Sans";
 	font-size: 1.9rem;
-	line-height: 1.2;
 	font-weight: normal;
 	letter-spacing: 0.8px;
 	text-shadow: 2px 2px #ffff33;
 	margin-bottom: 8px;
+	line-height: 1.2;
 }
-.Thesis-content .images span {
-	font-family: "Kreon", serif;
-	letter-spacing: 0.8px;
+.Thesis-content .images div:first-child {
+    border-top: none;
+    border-bottom: none;
+}
+.Thesis-content .images div:first-child section {
+	margin-top: 20px;
+}
+.Thesis-content .images div:last-child section {
+    margin-top: 25px;
+}
+.Thesis-content .images div:last-child {
+	border-bottom: none;
+	background: none;
+}
+.Thesis-content .images div:last-child span {
+	line-height: 1.4;
 }
 
-
+/* footer */
 footer  {
 	width: 100%;
 	display: flex;
@@ -910,8 +913,12 @@ nav.mobile-nav-container a:first-child img {
 
   
   
-  /* THESIS-EXIBIT DESKTOP */
-
+   /* THESIS-EXIBIT DESKTOP */
+@media only screen and (max-width: 1350px) {
+.Thesis-content .images div:first-child section {
+	 margin-top: -15px;
+ }
+}
 @media only screen and (max-width: 1300px) {
 
 .Thesis-content .images div:first-child section {
@@ -923,6 +930,12 @@ nav.mobile-nav-container a:first-child img {
 .Thesis-content .images div:first-child section {
 	 margin-top: -22px;
  }
+}
+
+@media only screen and (max-width: 890px) {
+.Thesis-content .images div:last-child section {
+     margin-top: -7px;
+ }	
 }
 
 /* thesis-exibit desktop 866px mq */
@@ -942,22 +955,32 @@ nav.mobile-nav-container a:first-child img {
  	font-size: 1rem;
  	letter-spacing: 0.6px;
 }
+.Thesis-content .images h3 {
+	font-size: 1.6rem;
+}
 .Thesis-content .images div:first-child section {
      margin-top: -17px;  
 }
-.Thesis-content .images h3 {
-	font-size: 1.6rem;
- }
+.Thesis-content .images div:last-child section {
+	 margin-top: 20px;
 }
 
 @media only screen and (max-width: 825px) {
+
+.Thesis-content .top-section p  {
+	font-size: 0.9rem;
+}
 
 .Thesis-content .images h3 {
 	font-size: 1.4rem;
  }	
 
+.Thesis-content .images section {
+	font-size: 0.9rem;
+}
+
 .Thesis-content .images div:first-child section {
-    margin-top: -10px;
+    margin-top: -3px;
  }
 }
 
