--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -158,7 +158,7 @@ nav a:hover {
 	line-height: 1.4;
 	letter-spacing: 0.8px;
 	word-spacing: 2px; 
-	margin: -9px 0px 13px 0px;
+	margin: -9px 0px 30px 0px;
 	font-weight: normal;
 }
 .main-content .top-section div {
@@ -175,8 +175,7 @@ nav a:hover {
 .main-content .info-images {
     width: 40%;
     display: flex;
-    margin-left: 32px;
-    margin-top: 32px;
+    margin: 32px 0px 32px 32px;
     flex-direction: column;
 }  
 .main-content .info-images div {
@@ -229,12 +228,16 @@ nav a:hover {
 }
 .main-content .info-images a {
 	color: black;
+	font-family: "Kranky";
+	text-decoration: none;
 	line-height: 2.5;
-	letter-spacing: 0.8px;
+	letter-spacing: 2px;
 }
 .main-content .info-images a:hover {
-    color: #d3d3d3;
-    transition: color 150ms ease-in-out;  
+    color: #ffff33;
+    font-weight: bold;
+    text-shadow: 2px 2px black;
+    transition: color 250ms ease-in-out, text-shadow 350ms ease-in-out;  
 }
 .main-content .mobile-images {
 	display: none;
@@ -572,7 +575,7 @@ nav.mobile-nav-container a:first-child img {
 }
 
 .top-banner h1 {
-	font-size: 2.8rem;
+	font-size: 3.3rem;
 }
 
 .top-banner h3 {
@@ -591,7 +594,7 @@ nav.mobile-nav-container a:first-child img {
 @media only screen and (max-width: 480px) {
 	
 .top-banner h1 {
-    font-size: 2rem;
+    font-size: 2.4rem;
 }
 
 .top-banner h3 {
@@ -806,6 +809,7 @@ nav.mobile-nav-container a:first-child img {
  }
 
 .main-content .info-images a {
+	font-size: 1.2rem;
     line-height: 0;
  }
 }
@@ -866,10 +870,11 @@ nav.mobile-nav-container a:first-child img {
 .Careers {
 	width: 100%;
 	text-align: center;
+	background: none;
 }
 
 .Careers h2 {
-	font-size: 2.4rem;
+	font-size: 2.8rem;
 	margin: 1px 0px 43px 0px;
 }
 
@@ -885,6 +890,9 @@ nav.mobile-nav-container a:first-child img {
 	border-radius: 0px;
 	text-align: center;
 	margin: 0px 0px 8px 0px;
+	border: solid 4px #d3d3d3;
+	background-color: #fafad2;
+	box-shadow: none;
 }
 
 .Careers .Boxes div:last-child {
@@ -893,6 +901,8 @@ nav.mobile-nav-container a:first-child img {
 
 .Careers .Boxes h3 {
 	display: block;
+	font-size: 1.8rem;
+	text-shadow: 2px 2px #ffff33;
 	margin-left: 0px;
 	width: 100%;	
 }
@@ -909,10 +919,28 @@ nav.mobile-nav-container a:first-child img {
 	display: none;
  }
 }
+  /* CAREERS MOBILE MQ */
+/* Careers mobile 480px mq */
+@media only screen and (max-width: 480px) {
 
+.Careers h2 {
+     font-size: 2rem;
+ }
+}
+
+.Careers .Boxes h3 {
+	font-size: ;
+}
 
   
   
+   
+
+
+
+
+
+
    /* THESIS-EXIBIT DESKTOP */
 @media only screen and (max-width: 1350px) {
 .Thesis-content .images div:first-child section {
@@ -993,7 +1021,7 @@ nav.mobile-nav-container a:first-child img {
 @media only screen and (max-width: 725px) {
 
 .title h2 {
-	font-size: 2.4rem;
+	font-size: 2.8rem;
 	margin-bottom: 6px;
 }
 
@@ -1018,19 +1046,28 @@ nav.mobile-nav-container a:first-child img {
 
 
 
+  /* FOOTER DESKTOP MQ */
+/* footer desktop 825px mq */
+@media only screen and (max-width: 866px) {
 
-  /* FOOTER MOBILE MQ */ 
-@media only screen and (max-width: 825px) {
-
-footer {
-	font-size: 0.1rem;
+footer .copy {
+	font-size: 0.6rem;
 }
+footer .terms {
+	font-size: 0.6rem;
+ }
 }
 
+@media only screen and (max-width: 725px) {
+	
+footer .copy {
+	 font-size: 0.8rem;
+ }
 
-
-
-
+footer .terms {
+     font-size: 0.8rem;
+ }
+}
 
 
 /* footer mobile 480px */
