--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -498,6 +498,7 @@ nav.mobile-nav-container a:first-child img {
 }
 /* top-banner desktop 866px mq */
 @media only screen and (max-width: 880px) {
+
 .top-banner {
 	display: block;
 }
@@ -516,31 +517,20 @@ nav.mobile-nav-container a:first-child img {
 }
 
 .top-banner h1 {
-	font-size: 3.3rem;
+	font-size: 3.4rem;
 }
 
 .top-banner h3 {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
 }
 
-.button {
-	justify-content: center;
-	padding-left: 0px;
-	margin-right: 16px;
+.top-banner .button {
+	position: relative;
+	left: 25%;
+	margin-right: 0px;
 	font-size: 1.3rem;
+	width: 50%;
  }
-}
-/* top-banner desktop 825px mq */
-@media only screen and (max-width: 825px)  {
-
-.top-banner h3 {
-    font-size: 1.1rem;
- }
-}
-/* top-banner desktop 725px mq */
-@media only screen and (max-width: 725px) {
-
-
 }
        /* MOBILE */
 /* top-banner mobile 480px mq */
@@ -555,8 +545,11 @@ nav.mobile-nav-container a:first-child img {
 }
 
 .button  {
-	font-size: 1.1rem;
-	padding: 9px 0px 9px 0px;
+	padding: 7px 0px 7px 0px;
+ }
+
+ .button a {
+ 	font-size: 1rem;
  }
 }
 /* top-banner mobile 380px mq */
@@ -620,7 +613,6 @@ nav.mobile-nav-container a:first-child img {
 @media only screen and (max-width: 959px) {
 
 .main-content .info-images div:last-child section {
-    
     margin-top: 10px;
  }
 }
@@ -639,6 +631,7 @@ nav.mobile-nav-container a:first-child img {
 .main-content .info-images div {
 	justify-content: center;
 	border-bottom: solid 1px #d3d3d3;
+	margin-top: 1px;
 	flex-wrap: wrap;
 	border: none;
 }
@@ -649,7 +642,7 @@ nav.mobile-nav-container a:first-child img {
 
 .main-content .info-images div:first-child section {
 	width: 100%;
-	margin: 32px 0px 16px 0px;
+	margin: 37px 0px 21px 0px;
 }
 
 .main-content .info-images div:nth-child(even) section {
@@ -662,9 +655,12 @@ nav.mobile-nav-container a:first-child img {
 	width: 100%;
 	background-size: cover;
 	margin-top: 32px;
-	margin-left: 0;
+	margin-left: 0px;
 }
 
+.main-content .info-images div:last-child h3 {
+	margin-left: 3px;
+}
 .main-content .info-images img {
 	display: block;
 	height: auto;
@@ -679,7 +675,7 @@ nav.mobile-nav-container a:first-child img {
 	text-align: center;
 	padding-top: -16px;
     font-size: 1rem;
-    margin: 0px 0px 32px 0px;
+    margin-bottom: 38px;
 }
 
 .main-content .info-images h3 {
@@ -711,24 +707,7 @@ nav.mobile-nav-container a:first-child img {
 }
 
 .main-content .info-images div:last-child section {
-	margin-top: 20px;
- }
-}
-/* main-content desktop 760px mq */
-@media only screen and (max-width: 760px) {
-
-.main-content .info-images div:nth-child(even) section {
-	margin-top: 35px;
- }
-
-.main-content .info-images div:last-child section {
-    margin-top: 15px;
- }
-}
-/* main-content desktop 725px mq */
-@media only screen and (max-width: 725px) {
-
-
+	margin-top: 37px;
  }
 }
   /* MAIN-CONTENT MOBILE MQ */
@@ -865,7 +844,7 @@ nav.mobile-nav-container a:first-child img {
 
 @media only screen and (max-width: 890px) {
 .Thesis-content .images div:last-child section {
-     margin-top: -7px;
+     margin-top: 3px;
  }	
 }
 
@@ -875,6 +854,10 @@ nav.mobile-nav-container a:first-child img {
 .title h2 {
 	font-size: 2.8rem;
 	margin-bottom: 6px;
+}
+
+.Thesis-content {
+	border-bottom: none;
 }
 
 .Thesis-content .top-section {
