--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -528,8 +528,29 @@ nav.mobile-nav-container a:first-child img {
 	position: relative;
 	left: 25%;
 	margin-right: 0px;
-	font-size: 1.3rem;
 	width: 50%;
+ }
+
+.top-banner .button a {
+    font-size: 1.3rem;
+ }
+}
+/* top-banner desktop 620px mq */
+@media only screen and (max-width: 620px) {
+
+.top-banner h1 {
+    font-size: 3.1rem;
+ }
+
+.top-banner h3 {
+    font-size: 1.1rem;
+ }
+
+.top-banner .button {
+    padding: 9px 0px;
+}
+.top-banner .button a {
+    font-size: 1.2rem;
  }
 }
        /* MOBILE */
@@ -544,11 +565,11 @@ nav.mobile-nav-container a:first-child img {
 	font-size: 1rem;
 }
 
-.button  {
-	padding: 7px 0px 7px 0px;
+.top-banner .button  {
+	padding: 7px 0px;
  }
 
- .button a {
+.top-banner .button a {
  	font-size: 1rem;
  }
 }
@@ -679,7 +700,8 @@ nav.mobile-nav-container a:first-child img {
 }
 
 .main-content .info-images h3 {
-	font-size: 1.8rem;
+	font-weight: bold;
+	font-size: 1.6rem;
  }
 
 .main-content .info-images a {
@@ -714,13 +736,44 @@ nav.mobile-nav-container a:first-child img {
 /* main-content mobile 480px mq */
 @media only screen and (max-width: 480px) {
 
-.main-content .mobile-images {
-	display: block;
- } 
-
 .main-content .info-images {
 	display: none;
+}
+
+.main-content .mobile-images {
+	display: block;
+} 
+
+.main-content .mobile-images div {
+    margin: 28px 16px;
+}
+
+.main-content .mobile-images img {
+	width: 100%;
+	height: auto;
+    border: solid 4px #d3d3d3;
  }
+
+.main-content .mobile-images section {
+    text-align: center;
+    font-family: "Kreon", serif;
+}
+
+.main-content .mobile-images h3 {
+    font-family: "Josefin Sans";
+    text-shadow: 2px 2px #ffff33;
+    margin-bottom: 8px;
+    font-weight: bold;
+    font-size: 1.5rem;
+ }
+
+.main-content .mobile-images span{
+	margin-bottom: 18px;
+	line-height: 1.6;
+}
+.main-content .mobile-images a {
+	line-height: 2;
+}
 }
 
 
@@ -733,10 +786,11 @@ nav.mobile-nav-container a:first-child img {
 	width: 100%;
 	text-align: center;
 	background: none;
+	border-bottom: none;
 }
 
 .Careers h2 {
-	font-size: 2.8rem;
+	font-size: 2.9rem;
 	margin: 1px 0px 43px 0px;
 }
 
@@ -763,10 +817,11 @@ nav.mobile-nav-container a:first-child img {
 
 .Careers .Boxes h3 {
 	display: block;
-	font-size: 1.8rem;
 	text-shadow: 2px 2px #ffff33;
 	margin-left: 0px;
-	width: 100%;	
+	width: 100%;
+	font-size: 1.6rem;
+	font-weight: bold;
 }
 
 .Careers .Boxes img {
@@ -806,14 +861,14 @@ nav.mobile-nav-container a:first-child img {
 @media only screen and (max-width: 480px) {
 
 .Careers h2 {
-     font-size: 2rem;
- }
+     
+ 
 }
 
 .Careers .Boxes h3 {
-	font-size: ;
+	
 }
-
+}
   
   
    
@@ -852,8 +907,8 @@ nav.mobile-nav-container a:first-child img {
 @media only screen and (max-width: 880px) {
 
 .title h2 {
-	font-size: 2.8rem;
-	margin-bottom: 6px;
+	font-size: 2.9rem;
+	margin-bottom: 18px;
 }
 
 .Thesis-content {
